--- a/sass/style.css
+++ b/sass/style.css
@@ -22,7 +22,19 @@ a {
   color: #000;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
 /* NAV */
+nav {
+  position: absolute;
+  width: 100%;
+  margin: 0  auto;
+}
+
 nav .navbar {
   display: flex;
   justify-content: space-between;
@@ -33,17 +45,18 @@ nav .navbar .logo {
   text-transform: capitalize;
   font-family: "Great Vibes";
   font-size: 2rem;
-  color: #97c444;
+  color: #e0cd25;
 }
 
 nav .navbar ul {
+  padding: 0;
   margin: 50px 0;
-  display: inline-flex;
+  display: flex;
   list-style: none;
 }
 
 nav .navbar ul li {
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 nav .navbar ul li:last-child {
@@ -51,11 +64,60 @@ nav .navbar ul li:last-child {
 }
 
 nav .navbar ul li a {
+  display: inline-block;
   text-transform: uppercase;
   font-family: "Roboto";
-  font-weight: bold;
   font-size: 1rem;
   color: #fff;
+  transform: scale(1, 0.9);
+}
+
+/* SPLASH */
+.splash {
+  height: 100vh;
+  width: 100%;
+  background-image: url("https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?cs=srgb&dl=asfalt-ciemny-droga-drzewa-531321.jpg&fm=jpg");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+.splash div {
+  height: 220px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.splash div :nth-child(1) {
+  font-weight: normal;
+  font-style: italic;
+  text-transform: capitalize;
+  font-size: 2rem;
+}
+
+.splash div :nth-child(2) {
+  font-family: "Roboto";
+  text-transform: uppercase;
+  font-size: 4rem;
+}
+
+.splash div .btn {
+  font-family: "Roboto";
+  text-align: center;
+  width: 220px;
+  height: 60px;
+  line-height: 60px;
+  background-color: #e0cd25;
+  color: #fff;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.15em;
 }
 
 /* MEDIA */
