--- a/sass/style.css
+++ b/sass/style.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Caladea", sans-serif;
+  color: #818181;
 }
 
 .container {
@@ -19,13 +20,29 @@ body {
 
 a {
   text-decoration: none;
-  color: #000;
+  color: #818181;
 }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   text-align: center;
+}
+
+.title {
+  margin: 90px auto;
+  text-align: center;
+}
+
+.title :nth-child(1) {
+  font-size: 2rem;
+  font-family: "Roboto";
+  text-transform: uppercase;
+  color: black;
+}
+
+.title :nth-child(2) {
+  font-style: italic;
 }
 
 /* NAV */
@@ -68,7 +85,7 @@ nav .navbar ul li a {
   text-transform: uppercase;
   font-family: "Roboto";
   font-size: 1rem;
-  color: #fff;
+  color: white;
   transform: scale(1, 0.9);
 }
 
@@ -82,7 +99,7 @@ nav .navbar ul li a {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
+  color: white;
 }
 
 .splash div {
@@ -113,11 +130,53 @@ nav .navbar ul li a {
   height: 60px;
   line-height: 60px;
   background-color: #e0cd25;
-  color: #fff;
+  color: white;
   border-radius: 3px;
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 0.15em;
+}
+
+/* SERVICES */
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.cards div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 50px;
+}
+
+.cards div:last-child {
+  margin-right: 0;
+}
+
+.cards div p {
+  display: inline-block;
+  text-align: center;
+  font-size: 0.9rem;
+  transform: scale(1, 0.9);
+  line-height: 1.5rem;
+}
+
+.cards div h3 {
+  font-family: "Roboto";
+  color: black;
+}
+
+.cards div i {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 2rem;
+  line-height: 4rem;
+  width: 4.5rem;
+  border: 3px solid #e0cd25;
+  border-radius: 50%;
+  color: #e0cd25;
 }
 
 /* MEDIA */
