--- a/sass/style.css
+++ b/sass/style.css
@@ -141,19 +141,18 @@ nav .navbar ul li a {
 
 /* SERVICES */
 .services {
-  margin-bottom: 72px;
+  margin-bottom: 65px;
 }
 
-.services .cards-1 {
-  margin-top: 90px;
+.services .cards {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 -25px;
+  margin: 65px -25px 0 -25px;
 }
 
-.services .cards-1 div {
+.services .cards div {
   flex: 1 0 25%;
   min-width: 200px;
   display: flex;
@@ -162,7 +161,7 @@ nav .navbar ul li a {
   margin: 25px;
 }
 
-.services .cards-1 div p {
+.services .cards div p {
   display: inline-block;
   text-align: center;
   font-size: 0.9rem;
@@ -170,12 +169,12 @@ nav .navbar ul li a {
   line-height: 1.5rem;
 }
 
-.services .cards-1 div h3 {
+.services .cards div h3 {
   font-family: "Roboto";
   color: black;
 }
 
-.services .cards-1 div i {
+.services .cards div i {
   margin-bottom: 20px;
   text-align: center;
   font-size: 2rem;
@@ -228,6 +227,39 @@ nav .navbar ul li a {
 .portfolio .wrap figure figcaption :nth-child(2) {
   margin: 0;
   font-style: italic;
+}
+
+/* FOOTER */
+footer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 30px 0;
+}
+
+footer p {
+  margin: 0;
+  position: absolute;
+  font-family: "Roboto";
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
+footer .social {
+  margin: 0 auto;
+  font-size: 0;
+}
+
+footer .social i {
+  text-align: center;
+  line-height: 40px;
+  width: 40px;
+  height: 40px;
+  color: white;
+  font-size: 20px;
+  background-color: black;
+  border-radius: 50%;
+  margin: 10px;
 }
 
 /* MEDIA */
