--- a/sass/style.scss
+++ b/sass/style.scss
@@ -165,15 +165,15 @@ nav{
 /* SERVICES */
 
 .services{
-    margin-bottom: 72px;
+    margin-bottom: 65px;
 
-    .cards-1{
-        margin-top: 90px;;
+    .cards{
+
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
-        margin: 0 -25px;
+        margin: 65px -25px 0 -25px;
 
         div{
             flex: 1 0 25%;
@@ -255,6 +255,41 @@ nav{
         }
     }
 
+}
+
+/* FOOTER */
+
+footer{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 30px 0;
+
+    p{
+        margin: 0;
+        position: absolute;
+        font-family: $font-header;
+        font-size: 0.9rem;
+        font-weight: bold;
+    }
+
+    .social{
+        margin: 0 auto;
+        font-size: 0;
+
+
+        i{  
+            text-align: center;
+            line-height: 40px;
+            width: 40px;
+            height: 40px;
+            color: $text-color-light;
+            font-size: 20px;
+            background-color: $text-color-dark;
+            border-radius: 50%;
+            margin: 10px;
+        }
+    }
 }
 
 /* MEDIA */
