--- a/sass/style.scss
+++ b/sass/style.scss
@@ -170,7 +170,7 @@ nav{
             transition: all 1s;
 
             &:hover{
-                box-shadow: inset 0 0 40px rgb(255, 253, 126);
+                box-shadow: 0 0 40px rgb(255, 253, 126);
 
             }
         }
@@ -296,6 +296,10 @@ footer{
         margin: 0 auto;
         font-size: 0;
 
+        a:hover i{
+            color: $text-color-logo;
+            box-shadow: 0 0 15px $text-color-logo;
+        }
 
         i{  
             text-align: center;
@@ -307,6 +311,7 @@ footer{
             background-color: $text-color-dark;
             border-radius: 50%;
             margin: 10px;
+            transition: all 0.5s;
         }
     }
 }
