--- a/sass/style.scss
+++ b/sass/style.scss
@@ -78,6 +78,14 @@ nav{
     width: 100%;
     margin: 0  auto;
 
+    input{
+        display: none;
+    }
+
+    label{
+        display: none;
+    }
+
     .navbar{
         justify-content: space-between;
         align-items: center;
@@ -97,6 +105,7 @@ nav{
             list-style: none;
            
             li{
+                position: relative;
                 margin-right: 30px;
 
                 &:last-child{
@@ -116,6 +125,38 @@ nav{
                         color: $text-color-logo;
                     }
                 }
+
+                .dropdown{
+                    z-index: -10;
+                    padding-top: 10px;
+                    width: 200px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    margin: 0;
+                    position: absolute;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+
+                    li{
+                        text-align: center;
+                        margin: 5px 0;
+                        a{
+                            transition:  1s ease;
+                            opacity: 0;
+
+                        }
+                    }
+                }
+
+                &:hover .dropdown{
+                   z-index: 10;
+
+                    li a{
+                        opacity: 1;
+                    }
+                }
+
             }
         }
     }
@@ -385,6 +426,105 @@ footer{
 
             &:last-child{
                 margin-right: 20px;
+            }
+        }
+    }
+
+    /* NAV*/
+    nav{
+        z-index: 1000;
+        position: fixed;
+    
+        label{
+            z-index: 1001;
+            position: absolute;
+            right: 10px;
+            top: 10px;
+            font-size: 20px;
+            margin: 10px 20px;
+            color: $text-color-logo;
+            display: block;
+            cursor: pointer;
+        } 
+        
+        input:checked ~ .navbar ul{
+            transform: translateY(0px);
+        }
+
+        input:checked ~ .navbar .logo{
+            transform: translateX(-200px);
+        }
+        .navbar{
+            display:    flex;
+            flex-direction: row;
+
+            .logo{
+                position: absolute;
+                top: 20px;
+                left: 20px;
+                transition: all 1s;
+                margin: 0;
+            }
+    
+            ul{ 
+                padding: 10px 0;
+                transform: translateY(-200px);
+                position: relative;
+                margin: 0;
+                display: flex;
+                flex-direction: column;
+                list-style: none;
+                transition: all 1s;
+                width: 100%;
+                background-color: #555;
+               
+                li{
+                    min-height: 24px;
+                    margin: 0;
+    
+                    &:last-child{
+                        margin-right: 0;
+                    }
+    
+                    .dropdown{
+
+                        background-color: transparentize($color: $text-color-logo, $amount: 0.2) ;
+                        position: static;
+                        z-index: 1000;
+                        padding-top: 0;
+                        padding-bottom: 0;
+                        margin: 0;
+                        display: block;
+                        transform: scaleY(0);
+                        transition: all 0.5s;
+                        height: 0;
+                        margin: 0 auto;
+                        color: $text-color-light;
+                        width: 100%;
+
+                        li{
+                            text-align: center;
+                            margin: 0;
+
+                            a{
+                                //font-size: 0.9rem;
+
+                                &:hover{
+                                    color: $text-color-dark;
+                                }
+                            }
+                        }
+                    }
+    
+                    &:hover .dropdown{
+                        padding-top: 10px;
+                        position: static;
+                        transform: scaleY(1);
+                        opacity: 1;
+                        height: 90px;
+                    }
+    
+                }
             }
         }
     }
